--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
   <div id="app"></div>
   <!-- built files will be auto injected -->
 </body>
+<script src="./static/iconfont/iconfont.js"></script>
 
 </html>
